--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-06-24 16:11:00 -0400 
+%% Created for Vijay at 2011-07-07 18:38:21 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,26 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@book{assocarray2008,
+	Author = {Kurt Mehlhorn and Peter Sanders},
+	Date-Added = {2011-07-07 18:35:33 -0400},
+	Date-Modified = {2011-07-07 18:37:27 -0400},
+	Publisher = {Springer},
+	Title = {Algorithms and Data Structures: The Basic Toolbox},
+	Year = {2008}}
+
+@article{iterative2003,
+	Author = {Craig Larman and Victor R. Basili},
+	Date-Added = {2011-07-07 18:19:47 -0400},
+	Date-Modified = {2011-07-07 18:21:13 -0400},
+	Journal = {IEEE Computer},
+	Month = {June},
+	Number = {6},
+	Pages = {47-56},
+	Title = {Interative and Incremental Development: A Brief History},
+	Volume = {36},
+	Year = {2003}}
 
 @inproceedings{tstick2007,
 	Author = {Joseph Malloch and Marcelo M. Wanderley},
